--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,8 +3,8 @@ import ThemeSwitcher from './ThemeSwitcher.astro'
 ---
 
 <div class="h-12">
-  <header class="w-full flex items-center bg-light text-dark px-8 h-[inherit] fixed top-0 justify-between z-100 border-b-(dark 4)">
-    <p class="font-bold text-lg">The Finals Randomizer</p>
+  <header class="w-full flex items-center bg-light text-dark px-8 h-[inherit] fixed top-0 justify-between z-100 paper">
+    <p class="font-extrabold text-lg">The Finals Randomizer</p>
     <ThemeSwitcher />
   </header>
 </div>
