--- a/src/components/LoadoutCard.astro
+++ b/src/components/LoadoutCard.astro
@@ -11,15 +11,15 @@ const { loadout } = Astro.props
 const classData = data[loadout.class]
 ---
 
-<div class="card border border-light/50">
-  <div class="flex items-center justify-between mb-2 border-b pb-2 border-b-light/50">
+<div class="card">
+  <div class="flex items-center justify-between mb-2 border-b pb-2 border-b-light/50 text-accent font-bold">
     <div class="flex items-center gap-2">
       <div class="i-material-symbols-light:account-circle size-8"></div>
-      <h3 class="text-2xl font-medium">{loadout.playerName}</h3>
+      <h3 class="text-2xl">{loadout.playerName}</h3>
     </div>
-    <h4 class="text-xl font-medium">{classData.name}</h4>
+    <h4 class="text-xl">{classData.name}</h4>
   </div>
-  
+
   <div class="flex items-center gap-1">
     <div class="i-material-symbols-light:settings-outline-rounded size-6"></div>
     <p class="font-medium decoration-underline">Specialization:</p>
