--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,9 @@ import ThemeSwitcher from './ThemeSwitcher.astro'
 
 <div class="h-12">
   <div class="fixed top-0 z-100 w-full h-[inherit]">
-    <header class="relative w-full flex items-center bg-light text-dark px-8 h-[inherit] justify-between backdrop-medium">
+    <header
+      class="relative w-full flex items-center bg-light text-dark px-8 h-[inherit] justify-between backdrop-medium"
+    >
       <p class="font-extrabold text-xl uppercase">The Finals Randomizer</p>
       <ThemeSwitcher />
     </header>
