--- a/src/components/LeaveRoomButton.astro
+++ b/src/components/LeaveRoomButton.astro
@@ -1,14 +1,14 @@
-<div class="grid">
-  <p aria-hidden="true">&nbsp;</p>
+<div class="grid lg:ml-0 ml-auto">
+  <p class="lg:block hidden" aria-hidden="true">&nbsp;</p>
   <button id="leaveRoom" class="btn bg-error ml-auto">Leave room</button>
 </div>
 
 <script>
-document.getElementById('leaveRoom')?.addEventListener('click', () => {
-  sendMessage('quit')
-  const currentUrl = new URL(window.location.href)
-  currentUrl.searchParams.delete('room')
+  document.getElementById('leaveRoom')?.addEventListener('click', () => {
+    sendMessage('quit')
+    const currentUrl = new URL(window.location.href)
+    currentUrl.searchParams.delete('room')
 
-  window.location.href = currentUrl.toString()
-})
+    window.location.href = currentUrl.toString()
+  })
 </script>
