--- a/src/components/LoadoutCard.astro
+++ b/src/components/LoadoutCard.astro
@@ -1,12 +1,22 @@
 <template id="loadout-card-template">
-  <div class="card" data-is-current="[isCurrentPlayer]">
+  <div id="[publicId]" class="card [class] relative">
+    <div
+      class="parent.isOnline:bg-green parent.isAfk:bg-orange size-4 animate-pulse absolute top-2 right-2 rounded-full"
+    >
+    </div>
+
     <div class="flex items-center justify-between mb-2 border-b pb-2 border-b-light/50 text-accent">
       <div class="flex items-center gap-2">
         <div class="[icon] size-8"></div>
-        <h3 class="text-2xl capitalize not-italic [usernameClass]">[username]</h3>
+        <h3 class="text-2xl capitalize not-italic parent.notCurrent:(text-light underline underline-accent)">
+          [username]
+        </h3>
       </div>
-      <h4 class="text-xl">[class]</h4>
+      <div class="i-material-symbols-light:refresh hidden parent.isAdmin:block" onclick="generatePlayer('[publicId]')">
+      </div>
     </div>
+
+    <h4 class="text-xl parent.isCurrent:text-accent">[class]</h4>
 
     <div class="flex items-center gap-1">
       <div class="i-material-symbols-light:settings-outline-rounded size-6"></div>
@@ -24,8 +34,6 @@
       <div class="i-material-symbols-light:tools-power-drill-outline size-6"></div>
       <p class="font-normal">Gadgets:</p>
     </div>
-    <ul class="list-disc-inside ml-6">
-      [gadgets]
-    </ul>
+    <ul class="list-disc-inside ml-6">[gadgets]</ul>
   </div>
 </template>
